@startuml
' skinparam para mejorar la apariencia
skinparam classAttributeIconSize 0
skinparam style strictuml
skinparam class {
    ArrowColor #2196F3
    BorderColor #2196F3
    BackgroundColor #ECEFF1
}
skinparam note {
    BorderColor #2196F3
    BackgroundColor #E3F2FD
}

' Interfaz y Clases
interface IMenu {
  +nombre: str
  +precio: float
  +esta_disponible(stock: Stock): bool
}

class CrearMenu {
  +CrearMenu(nombre, ingredientes, precio)
  +nombre: str
  +precio: float
  +ingredientes: List[Ingrediente]
}

class Ingrediente {
  +Ingrediente(nombre, cantidad, unidad)
  +nombre: str
  +cantidad: float
  +unidad: str
}

class Stock {
  +Stock()
  +lista_ingredientes: Dict[str, Ingrediente]
  +agregar_ingrediente(ing: Ingrediente)
  +reservar_ingredientes(ings: List[Ingrediente])
}

class Pedido {
  +Pedido()
  +menus: Dict[str, CrearMenu]
  +agregar_menu(menu: CrearMenu)
  +calcular_total(): float
}

class BoletaFacade {
  +BoletaFacade(pedido: Pedido)
  +generar_boleta(): string
}

class Restaurante {
  +Restaurante()
  -stock: Stock
  -pedido: Pedido
  +generar_boleta()
}

' Relaciones
Restaurante "1" *-- "1" Stock
Restaurante "1" *-- "1" Pedido
Restaurante ..> BoletaFacade : "usa"

BoletaFacade ..> Pedido : "usa para generar"

Pedido "1" o-- "*" CrearMenu
Stock "1" o-- "*" Ingrediente
CrearMenu "1" *-- "*" Ingrediente
CrearMenu ..|> IMenu

note right of Restaurante
  La clase principal de la aplicación
  que coordina las interacciones.
end note

note bottom of BoletaFacade
  Simplifica la creación de la boleta en PDF,
  ocultando la complejidad interna.
  (Patrón Facade)
end note

@enduml
